[package]
authors = ["Sridhar Ananthakrishnan <sridhar.kriyaos@gmail.com>"]
edition = "2021"
name = "kriyaos"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
